# xyzViewer

./: .gitignore  CMakeLists.txt  README.md  xyz_viewer.cpp
cow/: cow.xyz
dosei/: dosei.xyz
dosei_sweep/: new_000.xyz  new_001.xyz  new_002.xyz  new_003.xyz  new_004.xyz  new_005.xyz  new_006.xyz  new_007.xyz  new_008.xyz  new_009.xyz
ff/: n901.xyz
